# Human-Adversarial-Reinforcement-Learning

./: .gitignore  README.md  commands.sh  cuda_check.py  dqn.py  environment.yml  eval.py  glossary.csv  knegt.py  main.py  main.sh  on_complete.py  play.py  play_agent.py  pyproject.toml  requirements.txt  submit.sh  sweep.sh  test.py  train.py  utils.py  vectorized.py
HPC/: cuda_check.py  submit.sh
Tron_Godot/: Main.tscn  Tron_Godot.csproj  Tron_Godot.sln  project.godot
Tron_Godot/.import/: 100x100.png-8639231fa5e5b18c35b4a336ec7225a4.md5  1x1.png-46782dfa1611c3c684f01a6c7b0c62f0.md5  background.png-0cfaafa94fbfb5267bc500b34e5eeb6d.md5  (+3 more)
Tron_Godot/scripts/: Agent.cs  (+5 more)
agents/: __init__.py  base.py  deterministic.py  dqn.py  heuristic.py  mcts.py  random.py
environment/: env.py  tron.py  tron_env.py  wrappers.py
rl_core/: __init__.py  alphazero.py  alphazero_simul.py  argp.py  battle.py  battle_team.py  client.py  commands.sh  config.yml  environment.yml  eval.py  game.py  kek.txt  onnx_export.py  play.py  round_robin.py  self_play.py  self_play_onnx.py  self_train.py  self_train_pool.py  sweep.py  test.py  train pol.py  train.py  train_pol.py  train_ppo.py  upload.py  vectorized.py
rl_core/tron_env/: pyproject.toml
rl_core/tron_env/tron_env/: __init__.py  env.py  tron.py  utils.py  wrappers.py
server/: client.py  download_model.py  index.ts  last32.pkl  main.py  test.py  trajectories.db  upload_episode.py  upload_model.py
tron-godot/: icon.svg.import  main.tscn  project.godot
tron_unity/: .gitignore  CHANGELOG.md
utils/: helper.py  heuristics.py
(+152 files in other folders)
