[project]
name = "harl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv==1.2.1",
    "supabase==2.28.3",
    "numpy==2.2.6",
    "gymnasium==0.29.1",
    "onnx==1.20.1",
    "PyYAML==6.0.3",
    "tyro==1.0.8",
    "tensorboard==2.20.0",
    "torch==2.5.1",
    "tqdm==4.67.3",
    "wandb==0.25.0"
]
