[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-env"
version = "1.1.0"
description = "Human Adversarial RL Environment"
requires-python = ">=3.9"
dependencies = [
    "gymnasium", 
    "numpy", 
    "colorama",
    "pygame",
    ]

[tool.setuptools]
packages = ["tron_env"]